# gxtest

./: .bazelrc  .gitignore  BUILD.bazel  CMakeLists.txt  LICENSE.txt  MODULE.bazel  README.md
.github/workflows/: ci.yml
include/: gxtest.h  profiler.h
roms/prime_sieve/: Makefile  crt0.s  genesis.ld  main.c  prime_sieve_rom.h
roms/symbol_example/: Makefile  crt0.s  genesis.ld  main.c  symbol_example_symbols.h  symbol_example_symbols.txt
src/: gxtest.cpp  osd.h  profiler.cpp  stubs.c
tests/: example_test.cpp  prime_sieve_rom.h  prime_sieve_test.cpp  profiler_test.cpp  symbol_example_rom.h  symbol_example_test.cpp
tools/: elf2sym.py  gen_prime_rom.py
